teor_inf_1/regex.g4
grammar regex;

regex : regex_start EOF;
regex_start : unionExpression;

unionExpression  : concatExpression ('|' concatExpression)*;
concatExpression : quantExpression+;
quantExpression  : (symbol | parenthesizedExpression) ('*' | '+' | '?')?;

parenthesizedExpression : '(' regex_start ')';
symbol: CHAR;

CHAR : [ab];
WS : [ \t\r\n]+ -> skip;
